--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <html>
 
 <head>
-<meta http-equiv=Content-Type content="text/html; charset=big5">
+<meta http-equiv=Content-Type content="text/html; charset=utf-8">
 <meta name=Generator content="Microsoft Word 15 (filtered)">
 <style>
 <!--
  /* Font Definitions */
  @font-face
-	{font-family:·s²Ó©úÅé;
+	{font-family:æ–°ç´°æ˜é«”;
 	panose-1:2 2 5 0 0 0 0 0 0 0;}
 @font-face
 	{font-family:"Cambria Math";
@@ -16,7 +16,7 @@
 	{font-family:Calibri;
 	panose-1:2 15 5 2 2 2 4 3 2 4;}
 @font-face
-	{font-family:"\@·s²Ó©úÅé";
+	{font-family:"\@æ–°ç´°æ˜é«”";
 	panose-1:2 2 5 0 0 0 0 0 0 0;}
  /* Style Definitions */
  p.MsoNormal, li.MsoNormal, div.MsoNormal
@@ -31,14 +31,14 @@ a:visited, span.MsoHyperlinkFollowed
 	{color:purple;
 	text-decoration:underline;}
 p.MsoAcetate, li.MsoAcetate, div.MsoAcetate
-	{mso-style-link:"µù¸Ñ¤è¶ô¤å¦r ¦r¤¸";
+	{mso-style-link:"è¨»è§£æ–¹å¡Šæ–‡å­— å­—å…ƒ";
 	margin:0cm;
 	margin-bottom:.0001pt;
 	font-size:9.0pt;
 	font-family:"Cambria","serif";}
 span.a
-	{mso-style-name:"µù¸Ñ¤è¶ô¤å¦r ¦r¤¸";
-	mso-style-link:µù¸Ñ¤è¶ô¤å¦r;
+	{mso-style-name:"è¨»è§£æ–¹å¡Šæ–‡å­— å­—å…ƒ";
+	mso-style-link:è¨»è§£æ–¹å¡Šæ–‡å­—;
 	font-family:"Cambria","serif";}
 .MsoChpDefault
 	{font-family:"Calibri","sans-serif";}
@@ -62,52 +62,52 @@ div.WordSection1
 
 <p class=MsoNormal style='margin-top:9.0pt'><b><span lang=EN-US
 style='font-size:22.0pt'>1.</span></b><b><span style='font-size:22.0pt;
-font-family:"·s²Ó©úÅé","serif"'>­º¥ı¨ì</span></b><span lang=EN-US><a
+font-family:"æ–°ç´°æ˜é«”","serif"'>é¦–å…ˆåˆ°</span></b><span lang=EN-US><a
 href="https://netbeans.org/downloads/"><b><span style='font-size:22.0pt'>https://netbeans.org/downloads/</span></b></a></span></p>
 
 <p class=MsoNormal style='margin-top:9.0pt'><b><span style='font-size:22.0pt;
-font-family:"·s²Ó©úÅé","serif"'>¤U¸ü</span></b><b><span lang=EN-US style='font-size:
-22.0pt'>netbeans </span></b><b><span style='font-size:22.0pt;font-family:"·s²Ó©úÅé","serif"'>¿ï¾Ü¬õ®Øªº¨º­Ó¡]¦]¬°­n¥]¬A</span></b><b><span
+font-family:"æ–°ç´°æ˜é«”","serif"'>ä¸‹è¼‰</span></b><b><span lang=EN-US style='font-size:
+22.0pt'>netbeans </span></b><b><span style='font-size:22.0pt;font-family:"æ–°ç´°æ˜é«”","serif"'>é¸æ“‡ç´…æ¡†çš„é‚£å€‹ï¼ˆå› ç‚ºè¦åŒ…æ‹¬</span></b><b><span
 lang=EN-US style='font-size:22.0pt'>tomcat</span></b><b><span style='font-size:
-22.0pt;font-family:"·s²Ó©úÅé","serif"'>¡^</span></b></p>
+22.0pt;font-family:"æ–°ç´°æ˜é«”","serif"'>ï¼‰</span></b></p>
 
 <p class=MsoNormal style='margin-top:9.0pt'><b><span lang=EN-US
-style='font-size:22.0pt'><img border=0 width=1116 height=863 id="¹Ï¤ù 1"
+style='font-size:22.0pt'><img border=0 width=1116 height=863 id="åœ–ç‰‡ 1"
 src="index.files/image001.jpg"></span></b></p>
 
 <p class=MsoNormal style='margin-top:9.0pt'><b><span lang=EN-US
 style='font-size:22.0pt'>2.</span></b><b><span style='font-size:22.0pt;
-font-family:"·s²Ó©úÅé","serif"'>¤U¸ü¤§«á´N¦w¸Ë§a</span></b><b><span lang=EN-US
+font-family:"æ–°ç´°æ˜é«”","serif"'>ä¸‹è¼‰ä¹‹å¾Œå°±å®‰è£å§</span></b><b><span lang=EN-US
 style='font-size:22.0pt'>!!&nbsp; </span></b><b><span style='font-size:22.0pt;
-font-family:"·s²Ó©úÅé","serif"'>¦w¸Ëªº®É­Ô·|¥X²{¬õ®Ø®Ø¨º­Ó</span></b></p>
+font-family:"æ–°ç´°æ˜é«”","serif"'>å®‰è£çš„æ™‚å€™æœƒå‡ºç¾ç´…æ¡†æ¡†é‚£å€‹</span></b></p>
 
 <p class=MsoNormal style='margin-top:9.0pt'><b><span style='font-size:22.0pt;
-font-family:"·s²Ó©úÅé","serif"'>°O±o¥´¤Ä</span></b></p>
+font-family:"æ–°ç´°æ˜é«”","serif"'>è¨˜å¾—æ‰“å‹¾</span></b></p>
 
 <p class=MsoNormal style='margin-top:9.0pt'><b><span lang=EN-US
-style='font-size:22.0pt'><img border=0 width=949 height=789 id="¹Ï¤ù 2"
+style='font-size:22.0pt'><img border=0 width=949 height=789 id="åœ–ç‰‡ 2"
 src="index.files/image002.jpg"></span></b></p>
 
 <p class=MsoNormal style='margin-top:9.0pt'><b><span lang=EN-US
 style='font-size:22.0pt'>3. </span></b><b><span style='font-size:22.0pt;
-font-family:"·s²Ó©úÅé","serif"'>¦A¨Ó§â</span></b><b><span lang=EN-US style='font-size:
-22.0pt'>netbeans</span></b><b><span style='font-size:22.0pt;font-family:"·s²Ó©úÅé","serif"'>¥´¶}</span></b><b><span
+font-family:"æ–°ç´°æ˜é«”","serif"'>å†ä¾†æŠŠ</span></b><b><span lang=EN-US style='font-size:
+22.0pt'>netbeans</span></b><b><span style='font-size:22.0pt;font-family:"æ–°ç´°æ˜é«”","serif"'>æ‰“é–‹</span></b><b><span
 style='font-size:22.0pt'> </span></b><b><span style='font-size:22.0pt;
-font-family:"·s²Ó©úÅé","serif"'>¿ï</span></b><b><span lang=EN-US style='font-size:
+font-family:"æ–°ç´°æ˜é«”","serif"'>é¸</span></b><b><span lang=EN-US style='font-size:
 22.0pt'>NEW project</span></b></p>
 
 <p class=MsoNormal style='margin-top:9.0pt'><b><span lang=EN-US
-style='font-size:22.0pt'><img border=0 width=1106 height=747 id="¹Ï¤ù 3"
+style='font-size:22.0pt'><img border=0 width=1106 height=747 id="åœ–ç‰‡ 3"
 src="index.files/image003.jpg"></span></b><b><span lang=EN-US style='font-size:
-22.0pt'>&nbsp; 4. </span></b><b><span style='font-size:22.0pt;font-family:"·s²Ó©úÅé","serif"'>¿ï</span></b><b><span
+22.0pt'>&nbsp; 4. </span></b><b><span style='font-size:22.0pt;font-family:"æ–°ç´°æ˜é«”","serif"'>é¸</span></b><b><span
 lang=EN-US style='font-size:22.0pt'>Java Web&nbsp; </span></b><b><span
-style='font-size:22.0pt;font-family:"·s²Ó©úÅé","serif"'>µM«á</span></b><b><span
+style='font-size:22.0pt;font-family:"æ–°ç´°æ˜é«”","serif"'>ç„¶å¾Œ</span></b><b><span
 lang=EN-US style='font-size:22.0pt'> WebApplication </span></b><b><span
-style='font-size:22.0pt;font-family:"·s²Ó©úÅé","serif"'>³Ì«á¿ï</span></b><b><span
+style='font-size:22.0pt;font-family:"æ–°ç´°æ˜é«”","serif"'>æœ€å¾Œé¸</span></b><b><span
 lang=EN-US style='font-size:22.0pt'>next</span></b></p>
 
 <p class=MsoNormal style='margin-top:9.0pt'><b><span lang=EN-US
-style='font-size:22.0pt'><img border=0 width=1091 height=762 id="¹Ï¤ù 7"
+style='font-size:22.0pt'><img border=0 width=1091 height=762 id="åœ–ç‰‡ 7"
 src="index.files/image004.jpg"></span></b></p>
 
 <p class=MsoNormal style='margin-top:9.0pt'><b><span lang=EN-US
@@ -115,24 +115,24 @@ style='font-size:22.0pt'>&nbsp;</span></b></p>
 
 <p class=MsoNormal style='margin-top:9.0pt'><b><span lang=EN-US
 style='font-size:22.0pt'>5. </span></b><b><span style='font-size:22.0pt;
-font-family:"·s²Ó©úÅé","serif"'>¨ú­Ó¦W¤l</span></b><b><span lang=EN-US
+font-family:"æ–°ç´°æ˜é«”","serif"'>å–å€‹åå­</span></b><b><span lang=EN-US
 style='font-size:22.0pt'>&nbsp; </span></b><b><span style='font-size:22.0pt;
-font-family:"·s²Ó©úÅé","serif"'>µM«á</span></b><b><span lang=EN-US style='font-size:
+font-family:"æ–°ç´°æ˜é«”","serif"'>ç„¶å¾Œ</span></b><b><span lang=EN-US style='font-size:
 22.0pt'>next</span></b></p>
 
 <p class=MsoNormal style='margin-top:9.0pt'><b><span lang=EN-US
-style='font-size:22.0pt'><img border=0 width=1108 height=746 id="¹Ï¤ù 8"
+style='font-size:22.0pt'><img border=0 width=1108 height=746 id="åœ–ç‰‡ 8"
 src="index.files/image005.jpg"></span></b></p>
 
 <p class=MsoNormal style='margin-top:9.0pt'><b><span lang=EN-US
 style='font-size:22.0pt'>6.&nbsp; Server</span></b><b><span style='font-size:
-22.0pt;font-family:"·s²Ó©úÅé","serif"'>¿ï</span></b><b><span lang=EN-US
+22.0pt;font-family:"æ–°ç´°æ˜é«”","serif"'>é¸</span></b><b><span lang=EN-US
 style='font-size:22.0pt'>apache Tomcat&nbsp; </span></b><b><span
-style='font-size:22.0pt;font-family:"·s²Ó©úÅé","serif"'>µM«á</span></b><b><span
+style='font-size:22.0pt;font-family:"æ–°ç´°æ˜é«”","serif"'>ç„¶å¾Œ</span></b><b><span
 lang=EN-US style='font-size:22.0pt'>finsh</span></b></p>
 
 <p class=MsoNormal style='margin-top:9.0pt'><b><span lang=EN-US
-style='font-size:22.0pt'><img border=0 width=1108 height=758 id="¹Ï¤ù 6"
+style='font-size:22.0pt'><img border=0 width=1108 height=758 id="åœ–ç‰‡ 6"
 src="index.files/image006.jpg"></span></b></p>
 
 <p class=MsoNormal style='margin-top:9.0pt'><b><span lang=EN-US
@@ -143,19 +143,19 @@ style='font-size:22.0pt'>&nbsp;</span></b></p>
 
 <p class=MsoNormal style='margin-top:9.0pt'><b><span lang=EN-US
 style='font-size:22.0pt'>7. </span></b><b><span style='font-size:22.0pt;
-font-family:"·s²Ó©úÅé","serif"'>¦A¨ÓÂI¨ì</span></b><b><span lang=EN-US
+font-family:"æ–°ç´°æ˜é«”","serif"'>å†ä¾†é»åˆ°</span></b><b><span lang=EN-US
 style='font-size:22.0pt'>index&nbsp; </span></b><b><span style='font-size:22.0pt;
-font-family:"·s²Ó©úÅé","serif"'>«ö¤W­±ªººñ¦â¤T¨¤§Î</span></b></p>
+font-family:"æ–°ç´°æ˜é«”","serif"'>æŒ‰ä¸Šé¢çš„ç¶ è‰²ä¸‰è§’å½¢</span></b></p>
 
 <p class=MsoNormal style='margin-top:9.0pt'><b><span lang=EN-US
-style='font-size:22.0pt'><img border=0 width=1106 height=754 id="¹Ï¤ù 9"
+style='font-size:22.0pt'><img border=0 width=1106 height=754 id="åœ–ç‰‡ 9"
 src="index.files/image007.jpg"></span></b></p>
 
 <p class=MsoNormal style='margin-top:9.0pt'><b><span lang=EN-US
 style='font-size:22.0pt'>8. You Got it</span></b></p>
 
 <p class=MsoNormal style='margin-top:9.0pt'><b><span lang=EN-US
-style='font-size:22.0pt'><img border=0 width=1693 height=1283 id="¹Ï¤ù 10"
+style='font-size:22.0pt'><img border=0 width=1693 height=1283 id="åœ–ç‰‡ 10"
 src="index.files/image008.jpg"></span></b><b><span lang=EN-US style='font-size:
 22.0pt'>&nbsp;</span></b></p>
 
